added first Blue elements

--- a/gtk-3.0/adwaita-blue-dark.scss
+++ b/gtk-3.0/adwaita-blue-dark.scss
@@ -10,3 +10,7 @@ $variant: 'dark';
 @import 'drawing';
 @import 'common';
 @import 'colors-public';
+
+$variant: 'dark';
+
+@import 'adwaita-blue-overrides'
