--- a/gtk-3.0/adwaita-blue.scss
+++ b/gtk-3.0/adwaita-blue.scss
@@ -10,3 +10,7 @@ $variant: 'light';
 @import 'drawing';
 @import 'common';
 @import 'colors-public';
+
+$variant: 'dark';
+
+@import 'adwaita-blue-overrides'
